Projet GL/test/src/test/deca/context/invalid/increment2/bool-not-int.deca
// Test bool := not int

// Historique : cree le 11/01/2023

{
    boolean a = !1;
}